COMMERCE-8388 portal-language-lang autogenerated code (gw buildLang)

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -4562,6 +4562,7 @@ decorated=Decorat
 decoration=Decoració
 default=Per defecte
 default-account-addresses=Adreces de comptes per defecte
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Termes i condicions del compte per defecte
 default-associations=Associacions per defecte
 default-bearer-token-provider-configuration-name=BearerTokenProvider per defecte
@@ -13419,6 +13420,7 @@ set-background-image-properties=Definiu les propietats de la imatge de fons
 set-base-path-for-history-router=Definiu el camí bàsic per a l'encaminador de l'historial
 set-default-address=Establiu l'adreça per defecte
 set-default-billing-address=Establiu l'adreça de facturació per defecte
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Definiu l'entrada de les condicions comercials de l'entrega per defecte
 set-default-payment-commerce-term-entry=Definiu l'entrada de les condicions comercials de pagament per defecte
 set-default-shipping-address=Establiu l'adreça d'enviament per defecte
