--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -4562,6 +4562,7 @@ decorated=Dekorováno
 decoration=Dekorování
 default=Výchozí
 default-account-addresses=Výchozí adresy účtů (Automatic Translation)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=Výchozí spojení
 default-bearer-token-provider-configuration-name=Výchozí BearerTokenProvider (Automatic Translation)
@@ -13417,6 +13418,7 @@ set-background-image-properties=Nastavení vlastností obrázku na pozadí
 set-base-path-for-history-router=Nastavit základní cestu pro směrovač historie (Automatic Translation)
 set-default-address=Nastavit výchozí adresu (Automatic Translation)
 set-default-billing-address=Nastavení výchozí fakturační adresy (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=Nastavit výchozí dodací adresu (Automatic Translation)
