--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -4562,6 +4562,7 @@ decorated=Dekoreret
 decoration=Dekoration
 default=Standard
 default-account-addresses=Standardkontoadresser (Automatic Translation)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=Standard associationer
 default-bearer-token-provider-configuration-name=Standard BearerTokenProvider (Automatic Translation)
@@ -13417,6 +13418,7 @@ set-background-image-properties=Vælg baggrundsbilledeegenskaber
 set-base-path-for-history-router=Angiv basissti for oversigtsrouter (Automatic Translation)
 set-default-address=Angiv standardadresse (Automatic Translation)
 set-default-billing-address=Angiv standardfaktureringsadresse (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=Angiv standardleveringsadresse (Automatic Translation)
