--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -4562,6 +4562,7 @@ decorated=Dekorieren
 decoration=Dekoration
 default=Standard
 default-account-addresses=Standard-Kontoadressen
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Standard-Geschäftsbedingungen für Konto
 default-associations=Standardverknüpfungen
 default-bearer-token-provider-configuration-name=OAuth2 Standardkonfiguration BearerTokenProvider
@@ -13419,6 +13420,7 @@ set-background-image-properties=Eigenschaften des Hintergrundbilds festlegen
 set-base-path-for-history-router=Basispfad für History Router festlegen
 set-default-address=Standardadresse festlegen
 set-default-billing-address=Standard-Rechnungsadresse festlegen
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Standard-Zustellungsbeedingungseintrag für den Handel festlegen
 set-default-payment-commerce-term-entry=Standard-Zahlungsbedingungseintrag für den Handel festlegen
 set-default-shipping-address=Standard-Lieferadresse festlegen
