--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -4562,6 +4562,7 @@ decorated=Διακοσμημένος
 decoration=Διακόσμηση
 default=Προκαθορισμένο
 default-account-addresses=Προεπιλεγμένες διευθύνσεις λογαριασμών (Automatic Translation)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=Προκαθορισμένες συσχετίσεις
 default-bearer-token-provider-configuration-name=Προεπιλεγμένος φορέαςTokenΠροβλητής (Automatic Translation)
@@ -13417,6 +13418,7 @@ set-background-image-properties=Ορισμός ιδιοτήτων εικόνας
 set-base-path-for-history-router=Ορισμός βασικής διαδρομής για δρομολογητή ιστορικού (Automatic Translation)
 set-default-address=Ορισμός προεπιλεγμένης διεύθυνσης (Automatic Translation)
 set-default-billing-address=Ορισμός προεπιλεγμένης διεύθυνσης χρέωσης (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=Ορισμός προεπιλεγμένης διεύθυνσης αποστολής (Automatic Translation)
