--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -4562,6 +4562,7 @@ decorated=Koristeltu
 decoration=Koristelu
 default=Oletus
 default-account-addresses=Tilin Oletusosoitteet
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Oletustiliehdot
 default-associations=Oletusassosiaatiot
 default-bearer-token-provider-configuration-name=OAuth 2 Oletus-BearerTokenProvider-määritys
@@ -13416,6 +13417,7 @@ set-background-image-properties=Aseta taustakuvan asetuksia
 set-base-path-for-history-router=Aseta historiareitittimen juuripolku
 set-default-address=Aseta Oletusosoite
 set-default-billing-address=Aseta Oletuslaskutusosoite
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Aseta oletusarvoinen toimituskauppaehtomerkintä
 set-default-payment-commerce-term-entry=Aseta oletusarvoinen maksukauppaehtomerkintä
 set-default-shipping-address=Aseta Oletustoimitusosoite
