--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -4562,6 +4562,7 @@ decorated=सजाया
 decoration=सजावट
 default=डिफॉल्ट
 default-account-addresses=डिफ़ॉल्ट खाता
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=डिफॉल्ट associations
 default-bearer-token-provider-configuration-name=डिफॉल्ट बेयररटोकेंकप्रेडर (Automatic Translation)
@@ -13417,6 +13418,7 @@ set-background-image-properties=Background Image की Properties सेट क
 set-base-path-for-history-router=इतिहास राउटर के लिए आधार पथ सेट करें (Automatic Translation)
 set-default-address=डिफ़ॉल्ट पता सेट करें
 set-default-billing-address=डिफ़ॉल्ट बिलिंग पता सेट करें
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=डिफ़ॉल्ट शिपिंग पता सेट करें
