--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -4561,6 +4561,7 @@ decorated=Decorato
 decoration=Decorazione
 default=Predefinito
 default-account-addresses=Indirizzi Account Predefiniti
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=Associazioni predefinite
 default-bearer-token-provider-configuration-name=BearerTokenProvider predefinito (Automatic Translation)
@@ -13418,6 +13419,7 @@ set-background-image-properties=Imposta Proprietà dell'Immagine di Sfondo
 set-base-path-for-history-router=Impostare il percorso di base per il router cronologia (Automatic Translation)
 set-default-address=Imposta indirizzo predefinito (Automatic Translation)
 set-default-billing-address=Impostare l'indirizzo di fatturazione predefinito (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=Impostare l'indirizzo di spedizione predefinito (Automatic Translation)
