--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -4562,6 +4562,7 @@ decorated=מקושט
 decoration=קישוט
 default=ברירת מחדל
 default-account-addresses=כתובות חשבון המוגדרות כברירת מחדל (Automatic Translation)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=קישורים לפי ברירת מחדל
 default-bearer-token-provider-configuration-name=ברירת מחדל של BearerTokenProvider
@@ -13417,6 +13418,7 @@ set-background-image-properties=קבע תכונות תמונת רקע
 set-base-path-for-history-router=הגדרת נתיב בסיס עבור נתב היסטוריה (Automatic Translation)
 set-default-address=הגדרת כתובת ברירת מחדל (Automatic Translation)
 set-default-billing-address=הגדרת כתובת לחיוב המהווה ברירת מחדל (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=הגדרת כתובת משלוח המהווה ברירת מחדל (Automatic Translation)
