--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -4562,6 +4562,7 @@ decorated=Dihiasi (Automatic Translation)
 decoration=Hiasan (Automatic Translation)
 default=Lalai (Automatic Translation)
 default-account-addresses=Alamat Akaun Lalai (Automatic Translation)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=Persatuan Lalai (Automatic Translation)
 default-bearer-token-provider-configuration-name=Pemprovider BearerToken Lalai (Automatic Translation)
@@ -13417,6 +13418,7 @@ set-background-image-properties=Set Sifat Imej Latar Belakang (Automatic Transla
 set-base-path-for-history-router=Set Laluan Asas untuk Penghala Sejarah (Automatic Translation)
 set-default-address=Set Alamat Lalai (Automatic Translation)
 set-default-billing-address=Set Alamat Pengebilan Lalai (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=Set Alamat Penghantaran Lalai (Automatic Translation)
