--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -4562,6 +4562,7 @@ decorated=Decorado
 decoration=Decoração
 default=Valor por Omissão
 default-account-addresses=Endereços de conta padrão (Automatic Translation)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=Associações por Omissão
 default-bearer-token-provider-configuration-name=Portador padrãoTokenProvider (Automatic Translation)
@@ -13419,6 +13420,7 @@ set-background-image-properties=Configurar Propriedades da Imagem de Fundo
 set-base-path-for-history-router=Definir caminho base para roteador de história (Automatic Translation)
 set-default-address=Definir endereço padrão (Automatic Translation)
 set-default-billing-address=Definir endereço de cobrança padrão (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=Definir endereço de envio padrão (Automatic Translation)
