--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -4562,6 +4562,7 @@ decorated=Декорированный
 decoration=Декорация
 default=По умолчанию
 default-account-addresses=Адреса счетов по умолчанию (Automatic Translation)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=Связи по умолчанию
 default-bearer-token-provider-configuration-name=По умолчанию BearerTokenProvider (Automatic Translation)
@@ -13417,6 +13418,7 @@ set-background-image-properties=Установить свойства фонов
 set-base-path-for-history-router=Установите базовый путь для маршрутизатора истории (Automatic Translation)
 set-default-address=Установить адрес по умолчанию (Automatic Translation)
 set-default-billing-address=Установить адрес выставления счетов по умолчанию (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=Установить адрес доставки по умолчанию (Automatic Translation)
