--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -4562,6 +4562,7 @@ decorated=装饰的
 decoration=装饰
 default=默认
 default-account-addresses=默认帐户地址
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=默认帐户条款与条件
 default-associations=默认关联
 default-bearer-token-provider-configuration-name=默认 BearerTokenProvider
@@ -13419,6 +13420,7 @@ set-background-image-properties=设置背景图片属性
 set-base-path-for-history-router=设置历史路由的基础路径
 set-default-address=设置默认地址
 set-default-billing-address=设置默认账单地址
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=设置默认交货商务条款条目
 set-default-payment-commerce-term-entry=设置默认付款商务条款条目
 set-default-shipping-address=设置默认配送地址
