--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -4562,6 +4562,7 @@ decorated=裝飾
 decoration=裝飾
 default=預設
 default-account-addresses=預設帳戶住址
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=預設關聯
 default-bearer-token-provider-configuration-name=預設 BearerTokenProvider
@@ -13418,6 +13419,7 @@ set-background-image-properties=設置背景圖片屬性
 set-base-path-for-history-router=設置歷史路由的基礎路徑
 set-default-address=設定預設住址
 set-default-billing-address=設定預設帳單地址
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=設定預設出貨地址
