--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -4562,6 +4562,7 @@ decorated=مزيّن
 decoration=الزينة
 default=الإعتيادي
 default-account-addresses=عناوين الحساب الافتراضية
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=شروط وأحكام الحساب الافتراضية
 default-associations=الإقترانات الإعتادية
 default-bearer-token-provider-configuration-name=BearerTokenProvider الافتراضي
@@ -13417,6 +13418,7 @@ set-background-image-properties=تعيين خصائص صورة الخلفية
 set-base-path-for-history-router=تعيين المسار الأساسي لجهاز توجيه المحفوظات
 set-default-address=تعيين عنوان افتراضي
 set-default-billing-address=تعيين عنوان فوترة افتراضي
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=تعيين إدخال افتراضي لشرط التسليم التجاري
 set-default-payment-commerce-term-entry=تعيين إدخال افتراضي لشرط الدفع التجاري
 set-default-shipping-address=تعيين عنوان شحن افتراضي
