--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -4562,6 +4562,7 @@ decorated=Декориран
 decoration=Декорация
 default=По подразбиране
 default-account-addresses=Адреси на акаунти по подразбиране (Automatic Translation)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=Асоциации по подразбиране
 default-bearer-token-provider-configuration-name=Подразберотел Закачки (Automatic Translation)
@@ -13417,6 +13418,7 @@ set-background-image-properties=Настройка на изображениет
 set-base-path-for-history-router=Задаване на базов път за маршрутизатора за хронология (Automatic Translation)
 set-default-address=Задаване на адрес по подразбиране (Automatic Translation)
 set-default-billing-address=Задаване на адрес за фактуриране по подразбиране (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=Задаване на адрес за изпращане по подразбиране (Automatic Translation)
