--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -4562,6 +4562,7 @@ decorated=Decorado
 decoration=Decoración
 default=Valor por defecto
 default-account-addresses=Direcciones de cuenta por defecto
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Términos y condiciones de la cuenta por defecto
 default-associations=Asociaciones por defecto
 default-bearer-token-provider-configuration-name=BearerTokenProvider por defecto
@@ -13419,6 +13420,7 @@ set-background-image-properties=Espablecer las propiedades de la imagen de fondo
 set-base-path-for-history-router=Establecer ruta base para History Router
 set-default-address=Establecer dirección por defecto
 set-default-billing-address=Establecer dirección de facturación por defecto
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Establecer entrada de término de comercio de entrega por defecto
 set-default-payment-commerce-term-entry=Establecer entrada de término de comercio de pago por defecto
 set-default-shipping-address=Establecer dirección de envío por defecto
