--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -4562,6 +4562,7 @@ decorated=Dekoreeritud
 decoration=Dekoratsioon
 default=Vaikimisi
 default-account-addresses=Konto vaikeaadressid (Automatic Translation)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=Vaikeseosed
 default-bearer-token-provider-configuration-name=Vaike BearerTokenProvider (Automatic Translation)
@@ -13417,6 +13418,7 @@ set-background-image-properties=Määra taustapildi omadused
 set-base-path-for-history-router=Ajaloo marsruuteri baastee määramine (Automatic Translation)
 set-default-address=Sea vaikeaadress (Automatic Translation)
 set-default-billing-address=Vaikearveldusaadressi määramine (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=Vaike-saatmisaadressi määramine (Automatic Translation)
