--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -4562,6 +4562,7 @@ decorated=مرتب شده
 decoration=دکور
 default=پيش فرض
 default-account-addresses=آدرس های حساب پیش فرض (Automatic Translation)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=ارتباط های پیش‌فرض
 default-bearer-token-provider-configuration-name=پیش فرض BearerTokenProvider (Automatic Translation)
@@ -13417,6 +13418,7 @@ set-background-image-properties=ویژگی‌های تصویر پیش‌زمین
 set-base-path-for-history-router=تعیین مسیر پایه برای روتر تاریخچه (Automatic Translation)
 set-default-address=تنظیم آدرس پیش فرض (Automatic Translation)
 set-default-billing-address=تنظیم آدرس صورتحساب پیش فرض (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=تنظیم آدرس حمل و نقل پیش فرض (Automatic Translation)
