--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -4562,6 +4562,7 @@ decorated=Décoré
 decoration=Décoration
 default=Défaut
 default-account-addresses=Adresses de comptes par défaut
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=Associations par défaut
 default-bearer-token-provider-configuration-name=BearerTokenProvider par défaut
@@ -13417,6 +13418,7 @@ set-background-image-properties=Définir les propriétés de l'image de fond
 set-base-path-for-history-router=Définir le chemin de base pour le routeur d'historiques
 set-default-address=Définir l'adresse par défaut
 set-default-billing-address=Définir l'adresse de facturation par défaut
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=Définir l'adresse de livraison par défaut
