--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -4562,6 +4562,7 @@ decorated=Decorado
 decoration=Decoración
 default=Por defecto
 default-account-addresses=Enderezos de conta predeterminados
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=Asociacións por defecto
 default-bearer-token-provider-configuration-name=Default BearerTokenProvider (Automatic Copy)
@@ -13417,6 +13418,7 @@ set-background-image-properties=Establecer as propiedades da imaxe de fondo
 set-base-path-for-history-router=Set Base Path for History Router (Automatic Copy)
 set-default-address=Estabelecer enderezo predeterminado
 set-default-billing-address=Estabelecer enderezo de facturación predeterminado
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=Estabelecer enderezo de envío predeterminado
