--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -4562,6 +4562,7 @@ decorated=Díszített
 decoration=Díszítés
 default=Alapértelmezett
 default-account-addresses=Alapértelmezett fiókcímek
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Az alapértelmezett fiók szerződéses feltételei
 default-associations=Alapértelmezett társítások
 default-bearer-token-provider-configuration-name=Alapértelmezett BearerTokenProvider
@@ -13420,6 +13421,7 @@ set-background-image-properties=Háttérkép beállításai
 set-base-path-for-history-router=Az előzmények útválasztója alap-útvonalának a beállítása
 set-default-address=Alapértelmezett cím beállítása
 set-default-billing-address=Alapértelmezett számlázási cím beállítása
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Alapértelmezett átadási kereskedelmi feltételbejegyzés beállítása
 set-default-payment-commerce-term-entry=Alapértelmezett fizetési kereskedelmi feltételbejegyzés beállítása
 set-default-shipping-address=Alapértelmezett szállítási cím beállítása
