--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -4562,6 +4562,7 @@ decorated=Didekorasi
 decoration=Dekorasi
 default=Standar
 default-account-addresses=Alamat Akun Asali (Automatic Translation)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=Default Asosiasi
 default-bearer-token-provider-configuration-name=Pembawa DefaultTokenProvider (Automatic Translation)
@@ -13417,6 +13418,7 @@ set-background-image-properties=Tetapkan Latar Belakang Properti Gambar
 set-base-path-for-history-router=Atur Jalur Dasar untuk Perute Riwayat (Automatic Translation)
 set-default-address=Atur Alamat Asali (Automatic Translation)
 set-default-billing-address=Atur Alamat Tagihan Default (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=Atur Alamat Pengiriman Asali (Automatic Translation)
