--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -4562,6 +4562,7 @@ decorated=装飾済み
 decoration=装飾
 default=デフォルト
 default-account-addresses=デフォルトのアカウント住所
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=デフォルトのアカウント利用規約
 default-associations=デフォルトの関連付け
 default-bearer-token-provider-configuration-name=デフォルトの BearerTokenProvider
@@ -13419,6 +13420,7 @@ set-background-image-properties=背景画像のプロパティを設定します
 set-base-path-for-history-router=History Router の基本パスを設定してください
 set-default-address=デフォルトの住所を設定
 set-default-billing-address=デフォルトの請求先住所を設定
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=デフォルトの配送コマース条件エントリーを設定
 set-default-payment-commerce-term-entry=デフォルトの支払いコマース条件エントリーを設定
 set-default-shipping-address=デフォルトの配送先住所を設定
