--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -4562,6 +4562,7 @@ decorated=꾸미는
 decoration=훈장
 default=과태
 default-account-addresses=기본 계정 주소 (Automatic Translation)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=과태 협회
 default-bearer-token-provider-configuration-name=기본 보유자 토큰 공급자 (Automatic Translation)
@@ -13417,6 +13418,7 @@ set-background-image-properties=후면 이미지 재산을 놓으십시요
 set-base-path-for-history-router=기록 라우터의 기본 경로 설정 (Automatic Translation)
 set-default-address=기본 주소 설정 (Automatic Translation)
 set-default-billing-address=기본 청구 주소 설정 (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=기본 배송 주소 설정 (Automatic Translation)
