--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -4562,6 +4562,7 @@ decorated=Dekoruoti (Automatic Translation)
 decoration=Apdaila (Automatic Translation)
 default=Numatytasis (Automatic Translation)
 default-account-addresses=Numatytieji abonemento adresai (Automatic Translation)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=Numatytieji susiejimai (Automatic Translation)
 default-bearer-token-provider-configuration-name=Numatytasis BearerTokenProvider (Automatic Translation)
@@ -13417,6 +13418,7 @@ set-background-image-properties=Fono vaizdo ypatybių nustatymas (Automatic Tran
 set-base-path-for-history-router=Nustatyti pagrindinį retrospektyvos kelvedžio maršrutą (Automatic Translation)
 set-default-address=Nustatyti numatytąjį adresą (Automatic Translation)
 set-default-billing-address=Nustatyti numatytąjį atsiskaitymo adresą (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=Nustatyti numatytąjį siuntimo adresą (Automatic Translation)
