--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -4562,6 +4562,7 @@ decorated=Dekorert
 decoration=Dekorasjon
 default=Standard
 default-account-addresses=Standard forretningsforbindelsesadresser (Automatic Translation)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=Startassosiasjoner
 default-bearer-token-provider-configuration-name=Standard bærernøkkeltilbyder
@@ -13417,6 +13418,7 @@ set-background-image-properties=Angi bakgrunnsbilde egenskaper
 set-base-path-for-history-router=Angi basisbane for historikkruter (Automatic Translation)
 set-default-address=Angi standardadresse (Automatic Translation)
 set-default-billing-address=Angi standard faktureringsadresse (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=Angi standard leveringsadresse (Automatic Translation)
