--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -4562,6 +4562,7 @@ decorated=Opgemaakt
 decoration=Opmaak
 default=Standaard
 default-account-addresses=Standaard accountadressen
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Standaard algemene voorwaarden voor accounts
 default-associations=Standaardverbindingen
 default-bearer-token-provider-configuration-name=OAuth 2 standaardconfiguratie BearerTokenProvider
@@ -13420,6 +13421,7 @@ set-background-image-properties=Eigenschappen voor achtergrondafbeelding instell
 set-base-path-for-history-router=Basispad voor geschiedenisrouter instellen
 set-default-address=Standaardadres instellen
 set-default-billing-address=Standaard factuuradres instellen
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Standaardinvoer handelsvoorwaarden voor levering instellen
 set-default-payment-commerce-term-entry=Standaardinvoer handelsvoorwaarden voor betaling instellen
 set-default-shipping-address=Standaard verzendadres instellen
