--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -4562,6 +4562,7 @@ decorated=Opgemaakt
 decoration=Opmaak
 default=Standaard
 default-account-addresses=Default Account Addresses (Automatic Copy)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=Standaard verbindingen
 default-bearer-token-provider-configuration-name=Default BearerTokenProvider (Automatic Copy)
@@ -13420,6 +13421,7 @@ set-background-image-properties=Achtergrond afbeeldingseigenschappen instellen
 set-base-path-for-history-router=Set Base Path for History Router (Automatic Copy)
 set-default-address=Set Default Address (Automatic Copy)
 set-default-billing-address=Set Default Billing Address (Automatic Copy)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=Set Default Shipping Address (Automatic Copy)
