--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -4562,6 +4562,7 @@ decorated=Zdobione
 decoration=Zdobienie
 default=Domyślne
 default-account-addresses=Domyślne adresy kont (Automatic Translation)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=Domyślne przypisania
 default-bearer-token-provider-configuration-name=Domyślny bearerTokenProvider (Automatic Translation)
@@ -13417,6 +13418,7 @@ set-background-image-properties=Ustaw właściwości obrazka tła
 set-base-path-for-history-router=Ustawianie ścieżki podstawowej dla routera historii (Automatic Translation)
 set-default-address=Ustaw domyślny adres (Automatic Translation)
 set-default-billing-address=Ustawianie domyślnego adresu rozliczeniowego (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=Ustawianie domyślnego adresu wysyłki (Automatic Translation)
