--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -4562,6 +4562,7 @@ decorated=Decorado
 decoration=Decoração
 default=Padrão
 default-account-addresses=Endereços de conta padrão
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Termos e condições de conta padrão
 default-associations=Associações padrão
 default-bearer-token-provider-configuration-name=BearerTokenProvider padrão
@@ -13417,6 +13418,7 @@ set-background-image-properties=Configurar Propriedades da Imagem de Fundo
 set-base-path-for-history-router=Definir caminho base para o roteador de histórico
 set-default-address=Definir endereço padrão
 set-default-billing-address=Definir endereço de cobrança padrão
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Definir entrada de termo comercial de entrega padrão
 set-default-payment-commerce-term-entry=Definir entrada de termo de comércio de pagamento padrão
 set-default-shipping-address=Definir endereço de envio padrão
