--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -4562,6 +4562,7 @@ decorated=Decorat
 decoration=Decorații
 default=Implicit
 default-account-addresses=Adrese de cont implicite (Automatic Translation)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=Asociere Implicită
 default-bearer-token-provider-configuration-name=Purtător implicitTokenProvider (Automatic Translation)
@@ -13417,6 +13418,7 @@ set-background-image-properties=Seteaza Propritati Imagine Fundal
 set-base-path-for-history-router=Setare traseu de bază pentru ruterul istoric (Automatic Translation)
 set-default-address=Setare adresă implicită (Automatic Translation)
 set-default-billing-address=Setare adresă de facturare implicită (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=Setare adresă implicită de expediere (Automatic Translation)
