--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -4562,6 +4562,7 @@ decorated=Dekorovaný
 decoration=Dekorácia
 default=Predvolené
 default-account-addresses=Predvolené adresy kont (Automatic Translation)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=Predvolené asociácie
 default-bearer-token-provider-configuration-name=Predvolený nositeľTokenProvider (Automatic Translation)
@@ -13417,6 +13418,7 @@ set-background-image-properties=Nastaviť vlastnosti obrázku pozadia
 set-base-path-for-history-router=Nastaviť základnú cestu pre smerovač histórie (Automatic Translation)
 set-default-address=Nastaviť predvolenú adresu (Automatic Translation)
 set-default-billing-address=Nastavenie predvolenej fakturačnej adresy (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=Nastaviť predvolenú dodaciu adresu (Automatic Translation)
