--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -4562,6 +4562,7 @@ decorated=Okrašen
 decoration=Okrasitev
 default=Privzeto
 default-account-addresses=Privzeti naslovi računov (Automatic Translation)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=Privzete povezave
 default-bearer-token-provider-configuration-name=Privzeti nosilecTokenProvider (Automatic Translation)
@@ -13417,6 +13418,7 @@ set-background-image-properties=Nastavi lastnosti slike za ozadje
 set-base-path-for-history-router=Nastavi osnovno pot za usmerjevalnik zgodovine (Automatic Translation)
 set-default-address=Nastavi privzeti naslov (Automatic Translation)
 set-default-billing-address=Nastavi privzeti naslov obračunavanja (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=Nastavi privzeti naslov za pošiljanje (Automatic Translation)
