--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -4562,6 +4562,7 @@ decorated=Dekorerad
 decoration=Dekoration
 default=Standardvärde
 default-account-addresses=Standardadresser för konto
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Standardvillkor för konto
 default-associations=Startassociationer
 default-bearer-token-provider-configuration-name=Förinställd BearerTokenProvider
@@ -13417,6 +13418,7 @@ set-background-image-properties=Ange bakgrundsbildens egenskaper
 set-base-path-for-history-router=Ställ in bassökväg för historierouter
 set-default-address=Ange standardadress
 set-default-billing-address=Ange standardfaktureringsadress
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Ställ in post för handelsvillkor för standardleverans
 set-default-payment-commerce-term-entry=Ställ in post för handelsvillkor för standardbetalning
 set-default-shipping-address=Ange standardleveransadress
