--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -4562,6 +4562,7 @@ decorated=ตกแต่ง (Automatic Translation)
 decoration=ตกแต่ง (Automatic Translation)
 default=เริ่ม ต้น (Automatic Translation)
 default-account-addresses=ที่อยู่บัญชีผู้ใช้เริ่มต้น (Automatic Translation)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=ความสัมพันธ์เริ่มต้น (Automatic Translation)
 default-bearer-token-provider-configuration-name=ผู้ถือเริ่มต้นTokenProvider (Automatic Translation)
@@ -13417,6 +13418,7 @@ set-background-image-properties=ตั้งค่าคุณสมบัติ
 set-base-path-for-history-router=ตั้งค่าเส้นทางพื้นฐานสําหรับเราเตอร์ประวัติ (Automatic Translation)
 set-default-address=ตั้งค่าที่อยู่เริ่มต้น (Automatic Translation)
 set-default-billing-address=ตั้งค่าที่อยู่สําหรับเรียกเก็บเงินเริ่มต้น (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=ตั้งค่าที่อยู่จัดส่งเริ่มต้น (Automatic Translation)
