--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -4562,6 +4562,7 @@ decorated=Dekore Edilmiş
 decoration=Dekorasyon
 default=Varsayılan
 default-account-addresses=Varsayılan Hesap Adresleri (Automatic Translation)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=Varsayılan İlişkiler
 default-bearer-token-provider-configuration-name=Varsayılan BearerTokenProvider (Automatic Translation)
@@ -13417,6 +13418,7 @@ set-background-image-properties=Arkaplan Resminin Özelliklerini Seçiniz
 set-base-path-for-history-router=Geçmiş Yönlendiricisi için Temel Yolu Ayarla (Automatic Translation)
 set-default-address=Varsayılan Adresi Ayarla (Automatic Translation)
 set-default-billing-address=Varsayılan Fatura Adresini Ayarla (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=Varsayılan Sevkiyat Adresini Ayarla (Automatic Translation)
