--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -4562,6 +4562,7 @@ decorated=Декодований
 decoration=Декорація
 default=По замовчуванню
 default-account-addresses=Адреси облікових записів за промовчанням (Automatic Translation)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=Зв'язки по замовчуванню
 default-bearer-token-provider-configuration-name=Типовий носій, який має значення (Automatic Translation)
@@ -13417,6 +13418,7 @@ set-background-image-properties=Встановити властивості фо
 set-base-path-for-history-router=Установлення базового шляху для маршрутизатора журналу (Automatic Translation)
 set-default-address=Установити адресу за промовчанням (Automatic Translation)
 set-default-billing-address=Установлення адреси для виставлення рахунків за промовчанням (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=Установити адресу доставки за промовчанням (Automatic Translation)
