--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -4562,6 +4562,7 @@ decorated=Trang trí
 decoration=Trang trí nội thất
 default=Mặc định
 default-account-addresses=Địa chỉ Trương mục Mặc định (Automatic Translation)
+default-account-commerce-payment-methods=Default Account Commerce Payment Methods (Automatic Copy)
 default-account-terms-and-conditions=Default Account Terms and Conditions (Automatic Copy)
 default-associations=Các kết hợp mặc định
 default-bearer-token-provider-configuration-name=Mặc định BearerTokenProvider (Automatic Translation)
@@ -13417,6 +13418,7 @@ set-background-image-properties=Thuộc tính ảnh nền
 set-base-path-for-history-router=Đặt Đường dẫn Cơ sở cho Bộ định tuyến Lịch sử (Automatic Translation)
 set-default-address=Đặt Địa chỉ Mặc định (Automatic Translation)
 set-default-billing-address=Đặt Địa chỉ Thanh toán Mặc định (Automatic Translation)
+set-default-commerce-payment-method=Set Default Commerce Payment Method (Automatic Copy)
 set-default-delivery-commerce-term-entry=Set Default Delivery Commerce Term Entry (Automatic Copy)
 set-default-payment-commerce-term-entry=Set Default Payment Commerce Term Entry (Automatic Copy)
 set-default-shipping-address=Đặt Địa chỉ Vận chuyển Mặc định (Automatic Translation)
